--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,8 +29,7 @@ install:
   - "%PYTHON%\\Scripts\\pip install urllib3 chardet requests_ftp quandl pyensae"
   - "%PYTHON%\\Scripts\\pip install pycodestyle prompt_toolkit ipykernel qgrid"
   - "%PYTHON%\\Scripts\\pymy_install3 --task=tool --source=zip graphviz"
-  - "set PATH=%PATH%;C:\\projects\\pyensae\\build\\update_modules\\Graphviz\\bin"
-  - "dir C:\\projects\\pyensae\\build\\update_modules\\Graphviz\\bin"
+  - "set PATH=%PATH%;C:\\projects\\pyenbc\\build\\update_modules\\Graphviz\\bin"
 build: off
 
 test_script:
