--- a/.local.jenkins.win.yml
+++ b/.local.jenkins.win.yml
@@ -17,7 +17,8 @@ install:
 script:
   - { CMD: "python -X faulthandler -X showrefcount -u setup.py unittests", NAME: "UT" }
   - { CMD: "python -X faulthandler -X showrefcount -u setup.py unittests_LONG", NAME: "UT_LONG", TIMEOUT: 900}
-  - { CMD: "python -X faulthandler -X showrefcount -u setup.py unittests_SKIP", NAME: "UT_SKIP", TIMEOUT: 1500}
+  - { CMD: "python -X faulthandler -X showrefcount -u setup.py unittests -e .*SKIP.* -g .*pig.*", NAME: "UT_SKIP", TIMEOUT: 1500}
+  - { CMD: "python -X faulthandler -X showrefcount -u setup.py unittests -e .*pig.*", NAME: "UT_SKIP_PIG", TIMEOUT: 1500}
 after_script:
   - python setup.py bdist_wheel
   - if [ ${DIST} != "conda" and ${VERSION} == "3.6" and ${NAME} == "UT" ] then copy dist\*.whl {{root_path}}\..\..\local_pypi\local_pypi_server fi
