--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-dist: trusty
+dist: xenial
+sudo: true
 language: python
 python:
-    - "3.6"
+    - "3.7"
 install: 
     - pip install -r requirements.txt
     - pip install qgrid --upgrade --pre
