--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ install:
     - pip install -r requirements.txt
     - pip install qgrid --upgrade --pre
     - pip install -U git+https://github.com/ozgur/python-linkedin --no-deps
+    - export PYTHONPATH=src
 script:
     - python setup.py unittests
