--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,7 @@ install:
   - "%PYTHON%\\Scripts\\pymy_install3 --task=tool --source=zip graphviz"
   - "set PATH=%PATH%;C:\\projects\\pyenbc\\build\\update_modules\\Graphviz\\bin"
   - "%PYTHON%\\Scripts\\pip install -r requirements.txt"
+  - set PYTHONPATH=src
 build: off
 
 test_script:
