--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,7 @@ _doc/sphinxdoc/source/phdoc_static/require.js
 _doc/sphinxdoc/source/phdoc_static/style_notebook_snippet.css
 .vscode/settings.json
 src/pyenbc/.vscode/settings.json
+_doc/sphinxdoc/source/HISTORY.rst
+_doc/sphinxdoc/source/_temp_custom_run_script_.py.pkl
+_doc/sphinxdoc/source/_temp_custom_run_script_.py
+_doc/sphinxdoc/source/phdoc_static/viz.js
