--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,13 +18,8 @@ init:
 install:
   - "%PYTHON%\\python -m pip install --upgrade pip"
   - "%PYTHON%\\Scripts\\pip install pymyinstall"
-  - "%PYTHON%\\Scripts\\pymy_install3 --set=pyensae"
-  - "%PYTHON%\\Scripts\\pip install cryptography keyring jyquickhelper"
-  - "%PYTHON%\\Scripts\\pip install azure seaborn blockdiag"
+  - "%PYTHON%\\Scripts\\pip install numpy scipy"
   - "%PYTHON%\\Scripts\\pymy_install3 pycrypto"
-  - "%PYTHON%\\Scripts\\pip install pycryptodomex semantic_version"
-  - "%PYTHON%\\Scripts\\pip install urllib3 chardet requests_ftp quandl pyensae"
-  - "%PYTHON%\\Scripts\\pip install pycodestyle prompt_toolkit ipykernel qgrid"
   - "%PYTHON%\\Scripts\\pymy_install3 --task=tool --source=zip graphviz"
   - "set PATH=%PATH%;C:\\projects\\pyenbc\\build\\update_modules\\Graphviz\\bin"
   - "%PYTHON%\\Scripts\\pip install -r requirements.txt"
